--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Alex Seymour Profile</h1>
+        <h1>Russell Bowen</h1>
     </header>
     <main>
         <p>main</p>
